<resources>
    <string name="app_name">Wisdom Cloud</string>
    <string name="app_name_sf">Wisdom Cloud</string>
    <string name="app_name_qm">Wisdom Cloud</string>

    <string name="loading">Loading..</string>

    <string name="settings">setting</string>
    <string name="help">help</string>
    <string name="string_help_text">No Permission</string>
    <string name="quit">exit</string>
    <string name="press_again_exit">Press again to exit</string>
    <!--主页-->
    <string name="data">Data</string>
    <string name="device">Device</string>
    <string name="control">Control</string>
    <string name="control_title">Device Control</string>
    <string name="statistics">Statistics</string>
    <string name="statistics_title">Sleep Statistics</string>
    <string name="mall">Mall</string>
    <string name="set">Settings</string>

    <!--登录注册-->
    <string name="login_welcome">Welcome!</string>
    <string name="login_welcome_sf">Welcome!</string>
    <string name="login_welcome_qm">Welcome</string>
    <string name="account_name">User Name</string>
    <string name="user_info">User Information</string>
    <string name="user_associated">My Association</string>
    <string name="user_avater">Avater</string>
    <string name="user_nickname">Nickname</string>
    <string name="user_gender">Gender</string>
    <string name="user_height">Height</string>
    <string name="user_weight">Weight</string>
    <string name="sign_out">Sign Out</string>
    <string name="hint_account_name">Phone Number</string>
    <string name="hint_pwd">Password</string>
    <string name="login">Sign in</string>
    <string name="register">Sign up</string>
    <string name="pwd_forget">Forget password</string>
    <string name="normal_input_null">Input can not be empty</string>
    <string name="register_new_account">Sign up</string>
    <string name="get_verity">Send</string>
    <string name="account_verity_hint">please enter verification code</string>
    <string name="register_success">register success</string>

    <!--数据页面-->
    <string name="sleep_score">Sleep VAS</string>
    <string name="sleep_congress">Please Go On</string>
    <string name="sleep_total">总睡时长:8.8h</string>
    <string name="sleep_deep">深睡</string>
    <string name="sleep_clear">清醒</string>
    <string name="sleep_shallow">浅睡</string>
    <string name="sleep_time">入睡</string>
    <string name="sleep_negative">未眠状态: 1小时59分</string>
    <string name="sleep_not_bed">离床</string>
    <string name="sleep_report">Sleep Report</string>
    <string name="sleep_tim">Sleep Time</string>
    <string name="real_time">Real Time</string>
    <string name="sleep_record_time">Record Time 12:00~12:00</string>
    <string name="left">L</string>
    <string name="right">R</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="heart_rate_value">Heart Rate%d/m</string>
    <string name="breath_rate">Respiratory Rate</string>
    <string name="breath_rate_value">Respiratory Rate%d/m</string>
    <string name="more">More</string>
    <string name="model">Model</string>
    <string name="roll_body_rate">Body roll(m))</string>
    <string name="snoring">Snoring</string>

    <!--扫描设备-->
    <string name="devie_scan">Device Scan</string>
    <string name="scan">Scan</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting..</string>
    <string name="connect_success">Connected</string>
    <string name="ble_open_fail">Bluetooth open failed</string>
    <string name="bind_success">Bind device succeed</string>
    <string name="add_error">Error happened when adding</string>

    <!--控制页面-->
    <string name="lift_ctrl">Elevating Regulation</string>
    <string name="hardness">Bed Hardness</string>
    <string name="temperature">Bed Temperature</string>
    <string name="custom_mode">Custom Mode</string>
    <string name="lift_ctrl_title">Elevating</string>
    <string name="hardness_title">Hardness</string>
    <string name="hardness_cur_title">Cur Hardness</string>
    <string name="temperature_title">Temperature</string>
    <string name="save_mode">Save</string>
    <string name="head">Head</string>
    <string name="head_value">Head&#160;%d</string>
    <string name="feet">Feet</string>
    <string name="feet_value">Feet&#160;%d</string>
    <string name="left_value">Left&#160;%d</string>
    <string name="right_value">Right&#160;%d</string>
    <string name="left_mem_hardness">Left bed memory hardness&#160;%d</string>
    <string name="left_cur_hardness">Left bed current hardness&#160;%d</string>
    <string name="right_mem_hardness">Right bed memory hardness&#160;%d</string>
    <string name="right_cur_hardness">Right bed current hardness&#160;%d</string>
    <string name="gear_val">Gear%d</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="low">LOW</string>
    <string name="mid">MID</string>
    <string name="high">HIGH</string>
    <string name="tv_mode">TV&#x000A;Mode</string>
    <string name="sleep_mode">Sleep&#x000A;Mode</string>
    <string name="read_mode">Read&#x000A;Mode</string>
    <string name="relax_mode">Relax&#x000A;Mode</string>
    <string name="yoga_mode">Roga&#x000A;Mode</string>

    <!--设置页面-->
    <string name="one_key_check">Detection</string>
    <string name="mattress_info">Mattress Information</string>
    <string name="mattress_inter">Mattress Interconnection</string>
    <string name="snore_mode">Snoring Pattern</string>
    <string name="private_mode">Private Pattern</string>
    <string name="private_mode_hint">If turned on,device will be closed, device WiFi will be turned off. No sleep data will be recorded.</string>
    <string name="child_mode">Child Pattern</string>
    <string name="child_mode_hint">If turned on, the bed can not be lifted.</string>
    <string name="pregnant_mode">Pregnant Pattern</string>
    <string name="pregnant_mode_hint">If turned on,the amplitude of bed movements is limited to 35 degree adjustment.</string>
    <string name="auto_inflation">Automatic Inflation</string>
    <string name="me_associated">Me Associated</string>
    <string name="associated_me">Associated Me</string>
    <string name="associated">Associated</string>
    <string name="associated_together">Inter Associated</string>
    <string name="unused">Unused</string>
    <string name="using">Using</string>

    <!--一键检测-->
    <string name="gauge_hint">While gauging, please lie down with your eyes closed&#8230; &#8230;</string>
    <string name="gauge_result">Your best suited hardness:</string>
    <string name="gauge_write">Fill in information</string>

    <!--个人中心-->
    <string name="user_def_username_sf">舒是1</string>
    <string name="user_coin_sf">舒是coin：100</string>
    <string name="user_coin_mgr_sf">舒是coin Management</string>
    <string name="user_def_username_qm">曲美1</string>
    <string name="user_coin_qm">曲美coin：100</string>
    <string name="user_coin_mgr_qm">曲美coin Management</string>
</resources>

