<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_data"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@mipmap/ic_data"
        android:title="@string/data" />
    <item
        android:id="@+id/action_lift"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@mipmap/controlmattress"
        android:title="@string/lift_ctrl_title" />
    <item
        android:id="@+id/action_hardness"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@mipmap/mattress"
        android:title="@string/hardness_title" />
    <item
        android:id="@+id/action_temp"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@mipmap/ic_bed"
        android:title="@string/temperature_title" />
    <item
        android:id="@+id/action_setting"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@mipmap/ic_setting"
        android:title="@string/set" />
</menu>