<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/colorPrimaryDark"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/set"
            android:textColor="@color/textTitleColor"
            android:textSize="@dimen/textSize_18" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/ll_detail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shape_set_item"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mattress_info"
            android:textColor="#8f8f8f"
            android:textSize="@dimen/textSize_14" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_data_right" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_guanzhu"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shape_set_item"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mattress_inter"
            android:textColor="#8f8f8f"
            android:textSize="@dimen/textSize_14" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_data_right" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shape_set_item"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/snore_mode"
            android:textColor="#8f8f8f"
            android:textSize="@dimen/textSize_14" />

        <Switch
            android:id="@+id/sw_zhihan"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:switchMinWidth="44dp"
            android:textOff=""
            android:textOn=""
            android:thumb="@android:color/transparent"
            android:track="@drawable/switch_track" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shape_set_item"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/private_mode"
            android:textColor="#8f8f8f"
            android:textSize="@dimen/textSize_14" />

        <Switch
            android:id="@+id/sw_siren"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:switchMinWidth="44dp"
            android:textOff=""
            android:textOn=""
            android:thumb="@android:color/transparent"
            android:track="@drawable/switch_track" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:text="@string/private_mode_hint"
        android:textColor="#808f8f8f"
        android:textSize="@dimen/textSize_10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shape_set_item"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/child_mode"
            android:textColor="#8f8f8f"
            android:textSize="@dimen/textSize_14" />

        <Switch
            android:id="@+id/sw_ertong"

            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:switchMinWidth="44dp"
            android:textOff=""
            android:textOn=""
            android:thumb="@android:color/transparent"
            android:track="@drawable/switch_track" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:text="@string/child_mode_hint"
        android:textColor="#808f8f8f"
        android:textSize="@dimen/textSize_10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shape_set_item"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pregnant_mode"
            android:textColor="#8f8f8f"
            android:textSize="@dimen/textSize_14" />

        <Switch
            android:id="@+id/sw_yunfu"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:switchMinWidth="44dp"
            android:textOff=""
            android:textOn=""
            android:thumb="@android:color/transparent"
            android:track="@drawable/switch_track" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:text="@string/pregnant_mode_hint"
        android:textColor="#808f8f8f"
        android:textSize="@dimen/textSize_10" />

</LinearLayout>
